# gtpc

./: README.md
datagen/: CMakeLists.txt  README.md
datagen/src/: csv_writer.cpp  csv_writer.hpp  data_source.cpp  data_source.hpp  generator.cpp  generator.hpp  gtpc_main.cpp
queries/: olap.cypher  oltp.cypher
